<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/passport_black4">
    <TextView
        android:textSize="14.0dip"
        android:textColor="@color/passport_black2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:text="@string/passport_driver_info"
        android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_regist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">
        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:id="@+id/tv_regist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_name"
            android:layout_centerVertical="true" />
        <EditText
            android:textSize="16.0dip"
            android:textColor="#ff000000"
            android:textColorHint="#ffe5e5e5"
            android:id="@+id/et_regist_name"
            android:gravity="right"
            android:background="@color/transparent"
            android:paddingTop="@dimen/regist_edittext_padding_top"
            android:paddingBottom="@dimen/regist_edittext_padding_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32.0dip"
            android:hint="@string/passport_please_enter_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:layout_toRightOf="@id/tv_regist_name"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@null" />
    </RelativeLayout>
    <View
        android:id="@+id/view1"
        android:background="@color/passport_black3"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />
    <RelativeLayout
        android:id="@+id/layout_regist_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">
        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:id="@+id/tv_regist_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_idnum"
            android:layout_centerVertical="true" />
        <EditText
            android:textSize="16.0dip"
            android:textColor="#ff000000"
            android:textColorHint="#ffe5e5e5"
            android:id="@+id/et_regist_id"
            android:gravity="right"
            android:background="@color/transparent"
            android:paddingTop="@dimen/regist_edittext_padding_top"
            android:paddingBottom="@dimen/regist_edittext_padding_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32.0dip"
            android:hint="@string/passport_please_enter_idnum"
            android:singleLine="true"
            android:maxLength="18"
            android:inputType="textVisiblePassword"
            android:digits="0123456789xyzXYZ"
            android:layout_toRightOf="@id/tv_regist_id"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@null" />
    </RelativeLayout>
    <View
        android:id="@+id/view2"
        android:background="@color/passport_black3"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />
    <RelativeLayout
        android:id="@+id/layout_regist_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">
        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:id="@+id/tv_regist_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_time"
            android:layout_centerVertical="true" />
        <EditText
            android:textSize="16.0dip"
            android:textColor="#ff000000"
            android:textColorHint="#ffe5e5e5"
            android:id="@+id/et_regist_time"
            android:gravity="right"
            android:background="@color/transparent"
            android:paddingTop="@dimen/regist_edittext_padding_top"
            android:paddingBottom="@dimen/regist_edittext_padding_top"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginLeft="32.0dip"
            android:hint="@string/passport_please_enter_time"
            android:singleLine="true"
            android:maxLength="32"
            android:layout_toRightOf="@id/tv_regist_time"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@null"
            android:inputType="date"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
        <TextView
            android:id="@+id/passport_time"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_marginTop="29.5dip"
            android:src="@drawable/passport_right_arrow"
            android:layout_toRightOf="@id/et_regist_time"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/passport_black4">
        <TextView
            android:textSize="14.0dip"
            android:textColor="@color/passport_black2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_margin_left"
            android:text="@string/passport_car_info"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <View
        android:id="@+id/view3"
        android:background="@color/passport_black3"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />
    <RelativeLayout
        android:id="@+id/layout_regist_carid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">
        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:id="@+id/tv_regist_carid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_carid"
            android:layout_centerVertical="true" />
        <TextView
            android:id="@+id/tv_regist_carid_text"
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/et_regist_carid"
            android:text="京"
            android:layout_centerVertical="true" />
        <EditText
            android:textSize="16.0dip"
            android:textColor="#ff000000"
            android:textColorHint="#ffe5e5e5"
            android:id="@+id/et_regist_carid"
            android:gravity="right"
            android:background="@color/transparent"
            android:paddingTop="@dimen/regist_edittext_padding_top"
            android:paddingBottom="@dimen/regist_edittext_padding_top"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:hint="@string/passport_please_enter_carid"
            android:singleLine="true"
            android:maxLength="6"
            android:inputType="textVisiblePassword"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@null"/>
    </RelativeLayout>

    <View
        android:id="@+id/view4"
        android:background="@color/passport_black3"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />

    <RelativeLayout
        android:id="@+id/layout_regist_carname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">
        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:id="@+id/tv_regist_carname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_carname"
            android:layout_centerVertical="true" />
        <EditText
            android:textSize="16.0dip"
            android:textColor="#ff000000"
            android:textColorHint="#ffe5e5e5"
            android:id="@+id/et_regist_carname"
            android:gravity="right"
            android:background="@color/transparent"
            android:paddingTop="@dimen/regist_edittext_padding_top"
            android:paddingBottom="@dimen/regist_edittext_padding_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32.0dip"
            android:hint="@string/passport_please_enter_carname"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:maxLength="32"
            android:layout_toRightOf="@id/tv_regist_carname"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:textCursorDrawable="@null" />
    </RelativeLayout>
    <View
        android:id="@+id/view5"
        android:background="@color/passport_black3"
        android:layout_width="fill_parent"
        android:layout_height="1.0px" />
    <RelativeLayout
        android:id="@+id/layout_regist_cartime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_left"
        android:layout_marginRight="@dimen/login_margin_left">
        <TextView
            android:textSize="15.0dip"
            android:textColor="#ff666666"
            android:id="@+id/tv_regist_cartime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passport_cartime"
            android:layout_centerVertical="true" />
        <EditText
            android:textSize="16.0dip"
            android:textColor="#ff000000"
            android:textColorHint="#ffe5e5e5"
            android:id="@+id/et_regist_cartime"
            android:gravity="right"
            android:background="@color/transparent"
            android:paddingTop="@dimen/regist_edittext_padding_top"
            android:paddingBottom="@dimen/regist_edittext_padding_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32.0dip"
            android:hint="@string/passport_please_enter_cartime"
            android:singleLine="true"
            android:maxLength="32"
            android:layout_toRightOf="@id/tv_regist_cartime"
            android:layout_centerVertical="true"
            android:imeOptions="actionDone"
            android:inputType="date"
            android:textCursorDrawable="@null"
            android:focusable="false"
            android:focusableInTouchMode="false"/>
    </RelativeLayout>

</LinearLayout>