<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ffffffff"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.amap.driverdemo.module.login.PassportTitleBar
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="50dp">
    </com.amap.driverdemo.module.login.PassportTitleBar>
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/login_logo_height_dp"
                android:layout_height="@dimen/login_logo_height_dp"
                android:layout_marginTop="@dimen/login_logo_margin_top_dp"
                android:layout_marginBottom="@dimen/login_logo_margin_bottom_dp" />
            <ImageView
                android:id="@+id/line1"
                android:background="@drawable/line_shape"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_left" />
            <RelativeLayout
                android:id="@+id/layout_login_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_left"
                android:layout_below="@id/line1">
                <TextView
                    android:textSize="14.0dip"
                    android:textColor="#ff666666"
                    android:id="@+id/tv_login_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_edittext_txt_margin_left"
                    android:text="@string/login_phone_number_txt"
                    android:layout_centerVertical="true" />
                <EditText
                    android:textSize="16.0dip"
                    android:textColor="#ff000000"
                    android:textColorHint="#ffe5e5e5"
                    android:id="@+id/et_login_phone"
                    android:background="@color/transparent"
                    android:paddingTop="@dimen/login_edittext_padding_top"
                    android:paddingBottom="@dimen/login_edittext_padding_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:hint="@string/login_phone_txt"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:layout_toRightOf="@id/tv_login_phone"
                    android:layout_centerVertical="true"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:textCursorDrawable="@null" />
                <ImageButton
                    android:id="@+id/ib_login_del"
                    android:background="@drawable/login_phone_del"
                    android:layout_width="22.0dip"
                    android:layout_height="22.0dip"
                    android:scaleType="centerInside"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>
            <ImageView
                android:id="@+id/line2"
                android:background="@drawable/line_shape"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_left" />
            <RelativeLayout
                android:id="@+id/layout_login_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_left"
                android:layout_below="@id/line1">
                <TextView
                    android:textSize="14.0dip"
                    android:textColor="#ff666666"
                    android:id="@+id/tv_login_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/register_edittext_txt_margin_left"
                    android:text="@string/pwd"
                    android:layout_centerVertical="true" />
                <EditText
                    android:textSize="16.0dip"
                    android:textColor="#ff000000"
                    android:textColorHint="#ffe5e5e5"
                    android:id="@+id/et_login_pwd"
                    android:background="@color/transparent"
                    android:paddingTop="@dimen/login_edittext_padding_top"
                    android:paddingBottom="@dimen/login_edittext_padding_top"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32.0dip"
                    android:hint="@string/login_passord_txt"
                    android:singleLine="true"
                    android:maxLength="32"
                    android:layout_toRightOf="@id/tv_login_pwd"
                    android:layout_centerVertical="true"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textCursorDrawable="@null" />
            </RelativeLayout>
            <ImageView
                android:id="@+id/line3"
                android:background="@drawable/line_shape"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginRight="@dimen/login_margin_left" />
            <LinearLayout
                android:layout_gravity="left"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginTop="@dimen/login_edit_margin_top_dp"
                android:layout_marginRight="@dimen/login_margin_left">
                <CheckBox
                    android:id="@+id/service_agreement"
                    android:background="@drawable/check_btn_service_agreement_selector"
                    android:layout_width="24.0dip"
                    android:layout_height="24.0dip"
                    android:layout_marginLeft="@dimen/register_edittext_txt_margin_left"
                    android:button="@color/transparent" />
                <TextView
                    android:textSize="13.0dip"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7.0dip"
                    android:text="@string/login_input_i_agree" />
                <TextView
                    android:id="@+id/tv_service_agreement"
                    android:textSize="13.0dip"
                    android:textColor="@color/amap_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_agreement" />
            </LinearLayout>
            <Button
                android:textSize="16.0dip"
                android:textColor="@color/white"
                android:background="@color/amap_blue"
                android:id="@+id/login_btn"
                android:paddingTop="15.0dip"
                android:paddingBottom="15.0dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin_left"
                android:layout_marginTop="@dimen/login_edit_margin_top_dp"
                android:layout_marginRight="@dimen/login_margin_left"
                android:text="@string/login_btn" />
            <TextView
                android:textSize="13.0dip"
                android:gravity="right"
                android:layout_gravity="right"
                android:textColor="@color/amap_blue"
                android:id="@+id/login_forget_pwd"
                android:paddingTop="10.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/login_margin_left"
                android:text="@string/login_forget_pwd_txt" />
            <Button
                android:layout_width="@dimen/register_edttxt_width_dp"
                android:layout_height="@dimen/common_btn_confirm_height_dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/amap_blue"
                android:id="@+id/login_regist_btn"
                android:background="@color/transparent"
                android:layout_marginTop="@dimen/login_register_margin_top_dp"
                android:text="@string/login_register_btn" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>